# Arrata-Bot

./: .gitignore  Cargo.toml  README.md  pom.xml  skills.txt
quirks/: ethos.txt  logos.txt  pathos.txt
src/: char.rs  lib.rs  main.rs  roll.rs
src/main/java/: NovoTools.java  main.java
