[package]
name = "arrata-bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
shuttle-serenity = "0.38.0"
tokio = "1.26.0"
tracing = "0.1.37"

[dependencies.arrata_app]
git = "https://github.com/kalebvonburris/Arrata-APP"
branch = "main"
default-features = false
features = ["dice","character"]

[profile.dev]
lto = "off"
incremental = true

[profile.release]
opt-level = 'z'
lto = true
incremental = false
codegen-units = 1
panic = "abort"
strip = "symbols"
