[package]
name = "arrata-bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = [ "derive" ] }
itertools = "0.13.0"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.45.0"
shuttle-serenity = "0.45.0"
tokio = "1.38.0"
tracing = "0.1.40"

[dependencies.arrata-lib]
path = "../Arrata-LIB"
#git = "https://github.com/Arrata-TTRPG/Arrata-LIB"
#branch = "main"

[profile.dev]
lto = "off"
incremental = true

[profile.release]
opt-level = 3
lto = true
incremental = false
codegen-units = 1
panic = "abort"
strip = "symbols"
